--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="page-title">🛍️ Akun All Premium SHOP NAXAS</div>
-
+   <p>proses manual</p>
   <div class="container">
 
 
