--- a/index.html
+++ b/index.html
@@ -229,38 +229,6 @@ style="background-image:url('duolingo.jpg');">
   </div>
 </div>
 
-<!-- 14 CHATGPT PLUS -->
-<div class="product-card" data-name="ChatGPT Plus" data-price="9000"
-style="background-image:url('chatgpt.jpg');">
-  <div class="product-left">
-    <div class="product-thumb"><img src="logo gpt.png"></div>
-    <div class="product-info">
-      <div class="product-name">ChatGPT Plus</div>
-      <div class="product-desc">1 Bulan • Full Garansi</div>
-    </div>
-  </div>
-  <div class="product-action">
-    <div><div class="price-old">Rp 13.000</div><div class="price-new">Rp 9.000</div></div>
-    <button class="product-btn" onclick="toggleOrder(this)">Order</button>
-  </div>
-</div>
-
-<!-- 15 CHATGPT GO -->
-<div class="product-card" data-name="ChatGPT Go" data-price="9000"
-style="background-image:url('chatgpt.jpg');">
-  <div class="product-left">
-    <div class="product-thumb"><img src="logo gpt.png"></div>
-    <div class="product-info">
-      <div class="product-name">ChatGPT Go</div>
-      <div class="product-desc">1 Tahun • Full Garansi</div>
-    </div>
-  </div>
-  <div class="product-action">
-    <div><div class="price-old">Rp 11.000</div><div class="price-new">Rp 9.000</div></div>
-    <button class="product-btn" onclick="toggleOrder(this)">Order</button>
-  </div>
-</div>
-
 <!-- 16 AI GEMINI 1 TAHUN -->
 <div class="product-card" data-name="AI Gemini 1 Tahun" data-price="9000"
 style="background-image:url('gemini.png');">
@@ -268,11 +236,11 @@ style="background-image:url('gemini.png');">
     <div class="product-thumb"><img src="logo ai gemini.jpg"></div>
     <div class="product-info">
       <div class="product-name">AI Gemini</div>
-      <div class="product-desc">1 Tahun • Invite</div>
+      <div class="product-desc">1 Tahun • Head</div>
     </div>
   </div>
   <div class="product-action">
-    <div><div class="price-old">Rp 11.000</div><div class="price-new">Rp 9.000</div></div>
+    <div><div class="price-old">Rp 19.000</div><div class="price-new">Rp 16.000</div></div>
     <button class="product-btn" onclick="toggleOrder(this)">Order</button>
   </div>
 </div>
@@ -329,4 +297,5 @@ style="background-image:url('gemini.png');">
 <script src="script.js"></script>
 </body>
 </html>
+
 
